Add Clear Command

--- a/Lottery App/Lottery App.csproj
+++ b/Lottery App/Lottery App.csproj
@@ -60,6 +60,7 @@
     </ApplicationDefinition>
     <Compile Include="Base\RelayCommand.cs" />
     <Compile Include="Model\Item.cs" />
+    <Compile Include="Model\MsgBoxProp.cs" />
     <Compile Include="ViewModel\LotteryViewModel.cs" />
     <Compile Include="Base\ViewBase.cs" />
     <Compile Include="View\LotteryPage.xaml.cs">
